--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ button {
 
 .logo-mario {
     height: 200px;
-    margin-left: 150px;
+    margin-left: 45px;
 }
 
 .logo-mario-luigi {
@@ -42,6 +42,7 @@ body {
 }
 
 .super-caixa-mae {
+    text-align: center;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -91,6 +92,7 @@ video {
     gap: 30px;
   
 }
+
 
 
 .header img {
